--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Heli Game</title>
 </head>
 <body>
-    <div id="background">
+    <div id="score-area">
         <div id="life-score"></div>
         <div id="lives"></div>
-        <div id="heli-player"></div>
-        <div id="heli-computer"></div>
-        <div id="shot"></div>
+    </div>
+    <div id="game-area">
+        <div id="player"></div>
+        <div id="computer"></div>
+        <div id="bullet"></div>
         <div id="truck"></div>
         <div id="person"></div>
     </div>
