person and truck obj

--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 </head>
 <body>
     <div id="score-area">
-        <div id="life-score"></div>
-        <div id="lives"></div>
+        <div id="life-score">
+            Life Score:
+        </div>
+        <div id="lives">
+            3 x 4
+        </div>
     </div>
     <div id="game-area">
-        <div id="player"></div>
-        <div id="computer"></div>
+        <div id="player">
+            <!-- <img src="./assets/heli1.webp" alt="helicopter-player"> -->
+        </div>
+        <div id="computer">
+            <!-- <img src="./assets/heli2.png" alt="computer"> -->
+        </div>
         <div id="bullet"></div>
-        <div id="truck"></div>
-        <div id="person"></div>
+        <div id="truck">
+            <!-- <img src="./assets/militartruck.webp" alt="truck"> -->
+        </div>
+        <div id="person">
+            <!-- <img src="./assets/militar.jpeg" alt="person"> -->
+        </div>
     </div>
     <script type="module" src="game.js"></script>
 </body>
