--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
     <title>Heli Game</title>
 </head>
 <body>
     <div id="score-area">
         <div id="life-score">
-            Life Score:
-        </div>
-        <div id="lives">
-            3 x 4
-        </div>
+            Life Score:</div>
+        <div id="lives">3 x 4</div>
     </div>
     <div id="game-area">
         <div id="player"></div>
         <div id="computer"></div>
         <div id="bullet"></div>
         <div id="truck"></div>
-        <div id="person"></div>
+        <div id="character"></div>
     </div>
     <script type="module" src="game.js"></script>
 </body>
