--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div id="score-area">
-        <div id="life-score">
-            Life Score:</div>
+        <div id="life-score">Life Score:</div>
         <div id="lives">3 x 4</div>
     </div>
     <div id="game-area">
