--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Heli Game</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="score-area">
-        <div id="life-score">Life Score:</div>
-        <div id="lives">3 x 4</div>
+      <div>Life Score: <span id="life-score"> 3 </span></div>
+      <div>Cowboys saved: <span id="character-saved"> 0 </span></div>
+      <div id="lives">3 x 4</div>
     </div>
     <div id="game-area">
-        <div id="player"></div>
-        <div id="computer"></div>
-        <div id="bullet"></div>
-        <div id="truck"></div>
-        <div id="character"></div>
+      <div id="player"></div>
+      <div id="computer"></div>
+      <div id="bullet"></div>
+      <div id="truck"></div>
+      <div id="character"></div>
     </div>
     <script type="module" src="game.js"></script>
-</body>
+  </body>
 </html>
